--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
             background-color: #cc840c;
         }
 
+        /* FAQ Section Styles */
+        ul {
+            padding-left: 20px; /* Add padding to the left of the list */
+        }
+
+        ul li {
+            margin-bottom: 10px; /* Add space between list items */
+        }
+
         /* Responsive design */
         @media (max-width: 1200px) {
             body {
