--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         /* General styles */
         body {
-            background-color: #010f05; /* Solid dark background */
+            background-color: #000000; /* Solid dark background */
             color: #fff; /* White text */
             font-family: 'Roboto', sans-serif; /* Updated font */
             margin: 0;
@@ -21,7 +21,7 @@
             text-align: center;
             color: orange;
             margin-bottom: 50px;
-            background-color: rgba(26, 26, 26, 0.9); /* Nearly opaque for contrast */
+            background-color: #262626; /* Nearly opaque for contrast */
             padding: 20px 0;
         }
 
