--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
         <h3>9. From home, select 'More'</h3>
         <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/12.png" alt="Select 'More'">
 
-        <h3>10. Under 'Pinned,' select 'Pin' on the following libraries: Movies, TV Shows</h3>
+        <h3>10. Under 'Pinned,' select 'Pin' on the following libraries: Movies, TV Shows, Audiobooks, and 4K Local</h3>
         <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/13.png" alt="Pin Libraries">
 
-        <h3>11. Pin "Movies" and "TV Shows"</h3>
+        <h3>11. Pin Movies, TV Shows, Audiobooks, and 4K Local</h3>
         <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/14.png" alt="Pin Movies and TV Shows">
 
         <h3>12. For the rest of the categories, Unpin the following: Discover, Live TV, Movies & Shows, Music, Watchlist</h3>
