--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         /* General styles */
         body {
-            background-color: #000000; /* Solid dark background */
+            background-color: #222730; /* Solid dark background */
             color: #fff; /* White text */
             font-family: 'Roboto', sans-serif; /* Updated font */
             margin: 0;
@@ -21,7 +21,7 @@
             text-align: center;
             color: orange;
             margin-bottom: 50px;
-            background-color: #262626; /* Nearly opaque for contrast */
+            background-color: #2e3440; /* Nearly opaque for contrast */
             padding: 20px 0;
         }
 
@@ -32,7 +32,7 @@
 
         /* Section headers */
         h3 {
-            color: #0d5fd9; /* Blue */
+            color: #69829c; /* Blue */
             font-size: 1.7em;
             margin-top: 40px;
             text-shadow: 1px 1px 2px #000, -1px -1px 2px #000; /* Grey/white outline */
@@ -231,10 +231,10 @@
         <h3>9. From home, select 'More'</h3>
         <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/12.png" alt="Select 'More'">
 
-        <h3>10. Under 'Pinned,' select 'Pin' on the following libraries: Movies, TV Shows, Audiobooks, and 4K Local</h3>
+        <h3>10. Under 'Pinned,' select 'Pin' on the following libraries: Movies, TV Shows</h3>
         <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/13.png" alt="Pin Libraries">
 
-        <h3>11. Pin Movies, TV Shows, Audiobooks, and 4K Local</h3>
+        <h3>11. Pin "Movies" and "TV Shows"</h3>
         <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/14.png" alt="Pin Movies and TV Shows">
 
         <h3>12. For the rest of the categories, Unpin the following: Discover, Live TV, Movies & Shows, Music, Watchlist</h3>
