Added my own images

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
         <h3 class="quality-header">Quality Settings:</h3>
 
-        <h3>14. Next, Click on your profile icon, then go to Quality</h3>
+        <h3>14. Next, Click on your Settings icon (wrench), then go to Quality in the sidebar under Plex Web</h3>
         <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/18.png" alt="Go to Quality" class="small-image">
 
         <h3>15. Under Video Quality, Click on Internet Streaming</h3>
