--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
         <h3>1. Getting Started! Go to Plex.tv</h3>
 
         <h3>2. Click on Sign Up</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/1.png" alt="Sign Up">
+        <img src="VanCityGuy/plex-guide/images/step02.png" alt="Sign Up">
 
         <h3>3. Sign up using one of the methods provided</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/6.png" alt="Sign up Methods">
+        <img src="VanCityGuy/plex-guide/images/step03.png" alt="Sign up Methods">
 
         <h3>4. Once your account is created, Go to app.plex.tv</h3>
 
