--- a/index.html
+++ b/index.html
@@ -209,50 +209,57 @@
         <h3>1. Getting Started! Go to Plex.tv</h3>
 
         <h3>2. Click on Sign Up</h3>
-        <img src="/plex-guide/images/step02.png" alt="Sign Up">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step02.png" alt="Sign Up">
 
         <h3>3. Sign up using one of the methods provided</h3>
-        <img src="/plex-guide/images/step03.png" alt="Sign up Methods">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step03.png" alt="Sign up Methods">
 
-        <h3>4. Once your account is created, Go to app.plex.tv</h3>
+        <h3>4. Once your account is created, Go to app.plex.tv and when prompted change privacy settings</h3>
+        <ul>Go to both of the indicated sections</ul>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04.png" alt="Privacy">
+        <ul>Change everything to Private</ul>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04a.png" alt="Friend Access">
+        <ul>Change to Off</ul>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step04b.png" alt="Newsletter">
 
         <h3>5. Click on the settings icon located in the top right</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/8.png" alt="Settings Icon">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step05.png" alt="Settings Icon">
 
-        <h3>6. Within settings, Click on Manage Library Access</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/9.png" alt="Manage Library Access">
+        <h3>6. Within settings, click on Manage Library Access</h3>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step06.png" alt="Manage Library Access">
 
-        <h3>7. If you have been invited to someone's server, you can accept the invite by clicking the check mark</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/10.png" alt="Accept Invite">
+        <h3>7. You should see the server you have been invted to here. If necessary click the check mark to accept access.</h3>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step07.png" alt="Accept Invite">
 
-        <h3>8. Next, Refresh your browser page, then click the home icon in the top left</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/11.png" alt="Home Icon">
+        <h3>8. Next, click the home icon to return to the main page</h3>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step08.png" alt="Home Icon">
 
         <h3>9. From home, select 'More'</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/12.png" alt="Select 'More'">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step09.png" alt="Select 'More'">
 
-        <h3>10. Under 'Pinned,' select 'Pin' on the following libraries: Movies, TV Shows</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/13.png" alt="Pin Libraries">
+        <h3>10. You will see the server with the following libraries: 4K Local, Audiobooks, Movies, TV Shows</h3>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step10.png" alt="Pin Libraries">
 
-        <h3>11. Pin "Movies" and "TV Shows"</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/14.png" alt="Pin Movies and TV Shows">
+        <h3>11. Hover over each and click the three dots to Pin all four libraries (and playlists if you intend to use them)</h3>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step11.png" alt="Pin Movies and TV Shows">
 
-        <h3>12. For the rest of the categories, Unpin the following: Discover, Live TV, Movies & Shows, Music, Watchlist</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/15.png" alt="Unpin Other Categories">
+        <h3>12. For the Plex categories, Unpin the following: Discover, Live TV, Movies & Shows, Music, Watchlist</h3>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step12.png" alt="Unpin Other Categories">
 
-        <h3>13. Click on Home, Your menu should now look like the image below</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/16.png" alt="Menu Overview">
+        <h3>13. Click on Pinned, your menu should now look like the image below</h3>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13.png" alt="Pinned">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13a.png" alt="Menu Overview">
 
         <h3 class="quality-header">Quality Settings:</h3>
 
-        <h3>14. Next, Click on your Settings icon (wrench), then go to Quality in the sidebar under Plex Web</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/18.png" alt="Go to Quality" class="small-image">
+        <h3>14. Next, click on the Settings icon, then go to Quality in the sidebar under Plex Web</h3>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step14.png" alt="Go to Quality" class="small-image">
 
         <h3>15. Under Video Quality, Click on Internet Streaming</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/20.png" alt="Internet Streaming">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step15.png" alt="Internet Streaming">
 
-        <h3>16. Set both Home Streaming and Internet Streaming to Maximum</h3>
-        <img src="https://filedn.com/lQMTYhsrYNNb29MjPGGysO7/public/server/PlexGuides/21.png" alt="Maximum Quality">
+        <h3>16. Set both Home Streaming and Internet Streaming to Maximum, hit Save Changes, then click the Home icon in the top left corner to return to the main page.</h3>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step16.png" alt="Maximum Quality">
     </div>
 
     <div class="content-block">
