--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <h3>6. Within settings, click on Manage Library Access</h3>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step06.png" alt="Manage Library Access">
 
-        <h3>7. You should see the server you have been invted to here. If necessary click the check mark to accept access.</h3>
+        <h3>7. You should see the server you have been invited to here. If necessary click the check mark to accept access</h3>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step07.png" alt="Accept Invite">
 
         <h3>8. Next, click the home icon to return to the main page</h3>
@@ -241,24 +241,24 @@
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step10.png" alt="Pin Libraries">
 
         <h3>11. Hover over each and click the three dots to Pin all four libraries (and playlists if you intend to use them)</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step11.png" alt="Pin Movies and TV Shows">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step11.png" alt="Pin Movies and TV Shows" class="small-image">
 
         <h3>12. For the Plex categories, Unpin the following: Discover, Live TV, Movies & Shows, Music, Watchlist</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step12.png" alt="Unpin Other Categories">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step12.png" alt="Unpin Other Categories" class="small-image">
 
         <h3>13. Click on Pinned, your menu should now look like the image below</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13.png" alt="Pinned">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13.png" alt="Pinned" class="small-image">
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13a.png" alt="Menu Overview">
 
         <h3 class="quality-header">Quality Settings:</h3>
 
         <h3>14. Next, click on the Settings icon, then go to Quality in the sidebar under Plex Web</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step14.png" alt="Go to Quality" class="small-image">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step14.png" alt="Go to Quality">
 
-        <h3>15. Under Video Quality, Click on Internet Streaming</h3>
+        <h3>15. Under Internet Streaming, beside Video Quality choose Maximum</h3>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step15.png" alt="Internet Streaming">
 
-        <h3>16. Set both Home Streaming and Internet Streaming to Maximum, hit Save Changes, then click the Home icon in the top left corner to return to the main page.</h3>
+        <h3>16. Uncheck "Use recommended settings" and set both Home Streaming and Internet Streaming to Maximum. Click Save Changes, then click the home icon in the top left corner to return to the main page</h3>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step16.png" alt="Maximum Quality">
     </div>
 
