smaller than small

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
             max-width: 400px; /* Half the size of other images */
         }
 
+        /* Smaller step 14 image */
+        .smaller-image {
+            max-width: 300px; /* smaller than small */
+        }
+        
         /* New section indicator */
         .new-section {
             background-color: #333; /* Darker background for new section */
@@ -247,7 +252,7 @@
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step12.png" alt="Unpin Other Categories" class="small-image">
 
         <h3>13. Click on Pinned, your menu should now look like the image below</h3>
-        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13.png" alt="Pinned" class="small-image">
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13.png" alt="Pinned" class="smaller-image">
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step13a.png" alt="Menu Overview">
 
         <h3 class="quality-header">Quality Settings:</h3>
