Added client quality settings section

--- a/index.html
+++ b/index.html
@@ -265,6 +265,14 @@
 
         <h3>16. Uncheck "Use recommended settings" and set both Home Streaming and Internet Streaming to Maximum. Click Save Changes, then click the home icon in the top left corner to return to the main page</h3>
         <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/step16.png" alt="Maximum Quality">
+
+        <h3>17. For every new Plex client you setup you'll need change these settings once when first signing in. You'll also need to pin and unpin as describe above. Here some guides to changing the quality settings for the most popular clients:</h3>
+        <ul>iOS and Android app:</ul>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/ios_android.jpg" alt="iOS and Android">
+        <ul>Smart TV/Straming Stick/Gaming Console:</ul>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/smart_stick_console.jpg" alt="Smart Stick Console">
+        <ul>Apple TV tvOS:</ul>
+        <img src="https://raw.githubusercontent.com/VanCityGuy/plex-guide/main/images/tvOS.jpg" alt="tvOS">
     </div>
 
     <div class="content-block">
